Fixed start suggestion alignment issue in MarkdownEditor.

--- a/src/renderer/src/components/MarkdownEditor/MarkdownEditor.css
+++ b/src/renderer/src/components/MarkdownEditor/MarkdownEditor.css
@@ -7,13 +7,24 @@
   padding-bottom: var(--strong-length);
 }
 
+.markdown-editor-renderer-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+
+  width: 100%;
+  height: 100%;
+
+  user-select: text;
+}
+
 .markdown-editor-start-suggestion {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
 
   height: 100%;
+  
+  text-align: center;
 
   font-size: var(--font-size-backdrop);
 }
